RavenDB-21331 Fix horizontal scrolling for virtual grid

--- a/src/Raven.Studio/wwwroot/Content/css/pages/documents-edit.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/documents-edit.less
@@ -22,6 +22,7 @@
 
     .editors-container {
         z-index: 0;
+        overflow-x: hidden;
 
         .left-editor {
             left: 0;
